--- a/frontend/src/app/backoffice/sidebar/sidebar.component.html
+++ b/frontend/src/app/backoffice/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
       <li class="nav-item">
         <a routerLink="events" routerLinkActive="active" class="nav-link text-white">
           <i class="bi bi-bell-fill me-3"></i>
-          <span *ngIf="!isCollapsed">AI Events</span>
+          <span *ngIf="!isCollapsed">Events</span>
         </a>
       </li>
 
