--- a/frontend/src/app/frontoffice/navbar/navbar.component.html
+++ b/frontend/src/app/frontoffice/navbar/navbar.component.html
@@ -13,6 +13,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/frontoffice/eventsFront" routerLinkActive="active" >Events</a>
           </li>
+            <li class="nav-item">
+            <a class="nav-link" routerLink="/frontoffice/authface" routerLinkActive="active" >FaceAuth</a>
+          </li>
            <li class="nav-item">
           <a class="nav-link text-primary" routerLink="/frontoffice/camerasFront">Caméras</a>
         </li>
